@@ -65,7 +65,6 @@ export("as.PlainTextDocument",
        "pGetElem",
        "PlainTextDocument",
        "prescindMeta",
-       "preprocessReut21578XML",
        "RCV1Document",
        "Reuters21578Document",
        "scan_tokenizer",
